# openclaw-agentic-rag-plugin

./: .gitignore  README.md  index.ts  openclaw.plugin.json  openclaw.plugin.local.example.json  package.json  pyproject.toml
assays/: openclaw_agentic_rag_ab_suite_v1.json
bridge/: run_agentic_rag_tool.py
configs/: plugin.entry.hybrid.lmstudio.example.json  plugin.entry.hybrid.openai-compatible.example.json  plugin.entry.lexical.example.json
data/: corpus_demo.json
docs/: arbiter_v1.md  openclaw_agentic_rag_plugin_spec.md  openclaw_endpoint_mapping.md
src/agentic_rag_plugin/: README.md  __init__.py  arbiter.py  config.py  corpus_loader.py  manifest.json  plugin.py  types.py
tools/: build_corpus_from_folder.py  run_openclaw_agentic_rag_ab.py  run_openclaw_agentic_rag_retrieval_compare.py
